--- a/client/src/Section/Section.styl
+++ b/client/src/Section/Section.styl
@@ -8,8 +8,11 @@
 		font-size 14px
 		display inline-block
 
-		&--danger
+		&--state-danger
 			background-color red
+		
+		&--state-warning
+			background-color #d17600
 	
 	&__body
 		margin-top 20px
