--- a/client/src/SectionMess/SectionMess.styl
+++ b/client/src/SectionMess/SectionMess.styl
@@ -1,16 +1,18 @@
 div.section
-	div.header
-		button
-			background-color blue
-			color white
-			padding 10px
-			cursor pointer
-			text-decoration none
-			font-size 14px
-			display inline-block
+	button
+		background-color blue
+		color white
+		padding 10px
+		cursor pointer
+		text-decoration none
+		font-size 14px
+		display inline-block
 
-		button.danger
-			background-color red
+	button.danger
+		background-color red
+	
+	button.warning
+		background-color #d17600
 	
 	div.body
 		margin-top 20px
